Change color of gold coin, remove preventdefault, minor comment and spacing changes

--- a/styles.css
+++ b/styles.css
@@ -152,8 +152,8 @@ aside {
 
 .timer-div-gold {
     background-image: linear-gradient(to bottom left, gold, rgb(203, 172, 0));
-    border: rgb(88, 78, 1) solid 5px;
-    color: rgb(88, 78, 1);
+    border: rgb(126, 112, 5) solid 5px;
+    color: rgb(126, 112, 5);
     width: 120px;
     height: 120px;
     align-self: center;
